@@ -1194,3 +1194,4 @@ Prevent external login for clients = Verhindere Login aus externer Quelle für B
 Count default E-Mail addresses = Berechne die Standard-E-Mail-Adressen mit ein
 Show default E-Mail addresses = Zeige die Standard-E-Mail-Adressen
 This database will be permanently deleted. This process cannot be recovered. All users linked to this database will also be deleted if not linked to another database. Are you sure you want to delete %s? = Diese Datenbank wird endgültig gelöscht. Dieser Vorgang kann nicht rückgängig gemacht werden. Alle ausschließlich dieser Datenbank zugehörigen Nutzer werden ebenfalls gelöscht. Sind Sie sicher, dass sie die Datenbank %s löschen möchten?
+Number of CPU Cores = Anzahl der CPU-Kerne
