@@ -1,6 +1,10 @@
 ispCP ω 1.0.1 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+2009-04-29 Thomas Häber
+	- GUI:
+		* Added Feature: Show cpu cores in admin system tools - thanks to qisback
+
 2009-04-27 Christian Hernmarck
 	- GUI:
 		* Fixed #1499 - "where am I?" - highlighting the <tr> line under mouse...
